[gd_scene load_steps=8 format=3 uid="uid://cochr6vcv37j1"]

[ext_resource type="Texture2D" uid="uid://28nk67jjnpn0" path="res://assets/sprites/house 3 orange.png" id="1_6anmr"]
[ext_resource type="Script" path="res://scripts/house.gd" id="1_xgk74"]
[ext_resource type="AudioStream" uid="uid://dde5yfl8nbogr" path="res://assets/sounds/576535__bogenseeberg__delivered.wav" id="3_b3r46"]
[ext_resource type="AudioStream" uid="uid://vy8iqtmpm6ld" path="res://assets/sounds/wrong-47985.wav" id="4_pwr67"]
[ext_resource type="FontFile" uid="uid://butdfurnsewgi" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_kdvx4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h34sg"]
size = Vector2(104, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdfw8"]
size = Vector2(119, 98)

[node name="House3" type="Node2D"]
script = ExtResource("1_xgk74")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_h34sg")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.5, 2)
shape = SubResource("RectangleShape2D_mdfw8")

[node name="Label" type="Label" parent="Area2D"]
offset_left = -58.0
offset_top = -81.0
offset_right = 55.0
offset_bottom = -58.0
theme_override_fonts/font = ExtResource("5_kdvx4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(-1, 2)
scale = Vector2(0.414815, 0.412037)
texture = ExtResource("1_6anmr")

[node name="DeliverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_b3r46")

[node name="WrongSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pwr67")

[node name="Label" type="Label" parent="."]
offset_left = -54.0
offset_top = -114.0
offset_right = 50.0
offset_bottom = -91.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_kdvx4")
text = "HOUSE 3"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
